Update model selector to Claude 4.5 Sonnet

--- a/options.html
+++ b/options.html
@@ -102,7 +102,7 @@
       <label for="model">AI Model</label>
       <select id="model" style="width: 100%; padding: 10px; border-radius: 6px; border: 1px solid #d1d5db;">
         <option value="gpt-5.2">GPT-5.2 (OpenAI)</option>
-        <option value="claude-3-5-sonnet-20241022">Claude 3.5 Sonnet (Anthropic)</option>
+        <option value="claude-4-5-sonnet">Claude 4.5 Sonnet (Anthropic)</option>
       </select>
       <input type="text" id="customModel" placeholder="Enter model name (e.g. gpt-5.2)"
         style="width: 100%; padding: 10px; border-radius: 6px; border: 1px solid #d1d5db; margin-top: 8px; display: none; box-sizing: border-box;">
