Add general instructions feature for macro feedback on every prompt

--- a/options.html
+++ b/options.html
@@ -233,6 +233,14 @@
       <p class="info">The AI will mimic the structure and style of this email.</p>
     </div>
 
+    <div class="form-group">
+      <label for="generalInstructions">General Instructions (Always Included)</label>
+      <textarea id="generalInstructions" rows="3"
+        placeholder="e.g., 'Always keep emails under 100 words', 'Never mention my company name', etc."></textarea>
+      <p class="info">These instructions will be strongly emphasized in EVERY generated email. Use this for consistent
+        preferences or formatting rules.</p>
+    </div>
+
     <div class="form-group" style="display: flex; align-items: center; gap: 10px;">
       <input type="checkbox" id="financeRecruitingMode" style="width: 18px; height: 18px;">
       <label for="financeRecruitingMode" style="margin-bottom: 0; cursor: pointer;">Finance Recruiting Mode</label>
