--- a/options.html
+++ b/options.html
@@ -269,6 +269,55 @@
     </div>
     <p class="info" style="margin-top: -10px;">Enable dark theme for the extension interface.</p>
 
+    <div class="form-group" style="display: flex; align-items: center; gap: 10px;">
+      <input type="checkbox" id="apolloEnabled" style="width: 18px; height: 18px;">
+      <label for="apolloEnabled" style="margin-bottom: 0; cursor: pointer;">📧 Apollo.io Email Lookup <span
+          style="background: #dbeafe; color: #1e40af; padding: 2px 6px; border-radius: 4px; font-size: 11px; font-weight: 600;">OPT-IN</span></label>
+    </div>
+    <p class="info" style="margin-top: -10px;">Fallback email lookup using Apollo.io API when company patterns fail.
+      Requires consent.</p>
+
+    <!-- Apollo Legal Consent Modal -->
+    <div id="apolloConsentModal"
+      style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.5); z-index: 10000; justify-content: center; align-items: center;">
+      <div
+        style="background: white; border-radius: 12px; padding: 30px; max-width: 500px; margin: 20px; box-shadow: 0 25px 50px -12px rgba(0,0,0,0.25);">
+        <h3 style="margin-top: 0; display: flex; align-items: center; gap: 10px;">
+          <span style="font-size: 24px;">⚠️</span> Legal Disclaimer
+        </h3>
+        <p style="color: #4b5563; line-height: 1.6;">By enabling Apollo.io email lookup, you acknowledge and agree:</p>
+        <div style="background: #f9fafb; border: 1px solid #e5e7eb; border-radius: 8px; padding: 15px; margin: 15px 0;">
+          <label style="display: flex; align-items: flex-start; gap: 10px; margin-bottom: 12px; cursor: pointer;">
+            <input type="checkbox" id="consent1" style="margin-top: 4px; width: 16px; height: 16px;">
+            <span style="color: #374151; font-size: 14px;">I have a legitimate business reason to contact individuals
+              whose emails I look up.</span>
+          </label>
+          <label style="display: flex; align-items: flex-start; gap: 10px; margin-bottom: 12px; cursor: pointer;">
+            <input type="checkbox" id="consent2" style="margin-top: 4px; width: 16px; height: 16px;">
+            <span style="color: #374151; font-size: 14px;">I will comply with CAN-SPAM, GDPR, and applicable privacy
+              laws.</span>
+          </label>
+          <label style="display: flex; align-items: flex-start; gap: 10px; margin-bottom: 12px; cursor: pointer;">
+            <input type="checkbox" id="consent3" style="margin-top: 4px; width: 16px; height: 16px;">
+            <span style="color: #374151; font-size: 14px;">I understand this feature uses third-party data
+              services.</span>
+          </label>
+          <label style="display: flex; align-items: flex-start; gap: 10px; cursor: pointer;">
+            <input type="checkbox" id="consent4" style="margin-top: 4px; width: 16px; height: 16px;">
+            <span style="color: #374151; font-size: 14px;">I accept responsibility for how I use obtained email
+              addresses.</span>
+          </label>
+        </div>
+        <div style="display: flex; gap: 10px; margin-top: 20px;">
+          <button id="cancelConsent"
+            style="flex: 1; padding: 12px; background: #f3f4f6; border: 1px solid #d1d5db; border-radius: 8px; cursor: pointer; font-size: 14px; font-weight: 500;">Cancel</button>
+          <button id="acceptConsent"
+            style="flex: 1; padding: 12px; background: #2563eb; color: white; border: none; border-radius: 8px; cursor: pointer; font-size: 14px; font-weight: 500;"
+            disabled>I Accept & Enable</button>
+        </div>
+      </div>
+    </div>
+
     <!-- Authentication Status -->
     <div class="form-group" style="margin-top: 30px; border-top: 1px solid #e5e7eb; padding-top: 20px;">
       <label>Authentication Status</label>
